# aurora

./: .gitignore  Beamfile  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  clippy.toml  deny.toml  install.ps1  install.sh  rust-toolchain.toml  rustfmt.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/commands/: release.md
.github/workflows/: audit.yml  ci.yml  release.yml
benchmarks/: README.md  cache-correctness.sh  generate.py  results.md  run.sh
claude-code-plugin/: README.md
claude-code-plugin/.claude-plugin/: plugin.json
claude-code-plugin/agents/: aurora-expert.md
claude-code-plugin/hooks/: hooks.json  session-context.sh  validate-beamfile.sh
claude-code-plugin/skills/using-aurora/: SKILL.md
claude-code-plugin/skills/using-aurora/references/: beamfile-dsl.md  cli.md
crates/aurora/: Cargo.toml
crates/aurora-core/: Cargo.toml
crates/aurora-core/src/: ast.rs  cache.rs  dag.rs  env.rs  events.rs  expand.rs  lib.rs  scheduler.rs
crates/aurora-core/src/parser/: aurora.pest  mod.rs
crates/aurora-core/tests/: ast_test.rs  cache_test.rs  dag_test.rs  env_overlay_test.rs  env_test.rs  expand_test.rs  parser_duplicate_beam_test.rs  parser_gate_interpolation_test.rs  parser_params_test.rs  parser_test.rs  scheduler_cache_test.rs  scheduler_cancel_test.rs  scheduler_condition_test.rs  scheduler_dir_test.rs  scheduler_env_overlay_test.rs  scheduler_executor_error_test.rs  scheduler_panic_test.rs  scheduler_parallelism_test.rs  scheduler_rerun_test.rs  scheduler_semaphore_cancel_test.rs  scheduler_shutdown_test.rs  scheduler_skip_if_test.rs  scheduler_test.rs  scheduler_unknown_executor_test.rs
crates/aurora-executor-api/: Cargo.toml
crates/aurora-executor-api/src/: lib.rs
crates/aurora-executor-api/tests/: executor_api_test.rs
crates/aurora-executor-docker/: Cargo.toml
crates/aurora-executor-docker/src/: lib.rs
crates/aurora-executor-docker/tests/: docker_executor_test.rs
crates/aurora-executor-local/: Cargo.toml
crates/aurora-executor-local/src/: lib.rs
crates/aurora-executor-local/tests/: kill_on_drop_test.rs  local_executor_test.rs  spawn_behaviour_test.rs  spawn_strategy_test.rs  stdin_isolation_test.rs
crates/aurora-tui/: Cargo.toml
crates/aurora-tui/src/: app.rs  deps_panel.rs  execution_view.rs  lib.rs  picker_view.rs
crates/aurora-tui/src/execution/: beam_list.rs  deps_panel.rs  log_panel.rs  mod.rs  split_layout.rs
crates/aurora-tui/src/picker/: deps_panel.rs  fuzzy.rs  mod.rs  view.rs
crates/aurora-tui/src/widgets/: help_popup.rs  mod.rs  status_bar.rs
crates/aurora-tui/tests/: app_state_test.rs  fuzzy_test.rs  log_lines_test.rs  log_scroll_test.rs  log_search_live_test.rs  log_search_test.rs  log_search_unicode_test.rs  log_title_cache_test.rs  log_view_test.rs  nav_wrap_test.rs  non_launchable_test.rs  panic_hook_test.rs  picker_integration_test.rs  picker_params_test.rs  picker_render_test.rs  progress_scope_render_test.rs  rerun_test.rs  run_scope_test.rs  runner_focus_test.rs  select_first_failed_test.rs  status_bar_test.rs  visual_lines_test.rs  visual_overflow_test.rs  warning_event_test.rs
crates/aurora/src/: headless.rs  json.rs  lib.rs  main.rs  plugins.rs  reporter.rs  time.rs  watch.rs
crates/aurora/tests/: args_cli_test.rs  completions_cli_test.rs  headless_cli_test.rs  headless_test.rs  json_cli_test.rs  json_test.rs  parallelism_default_test.rs  params_cli_test.rs  phantom_beams_test.rs  plugins_test.rs  resolve_run_inputs_test.rs  run_closure_names_test.rs  sigint_cli_test.rs  unknown_target_cli_test.rs  watch_cli_test.rs  watch_debounce_test.rs  watch_headless_cli_test.rs  watch_reload_params_cli_test.rs  watch_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: discovery.rs  main.rs  output.rs
crates/cli/src/commands/: cache.rs  graph.rs  init.rs  list.rs  mod.rs  run.rs  validate.rs  watch.rs
crates/core/: Cargo.toml
crates/core/src/: beam.rs  beamfile.rs  condition.rs  error.rs  hook.rs  interpolation.rs  lib.rs  variable.rs
crates/engine/: Cargo.toml
crates/engine/src/: cache.rs  dag.rs  executor.rs  lib.rs  runner.rs  scheduler.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  combinators.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: error.rs  host.rs  lib.rs  manifest.rs  runtime.rs
docs/plans/: 2026-03-04-aurora-design.md  2026-03-04-aurora-implementation.md  2026-03-04-rerun-beam-design.md  2026-03-04-rerun-beam-impl.md  2026-03-04-tui-log-scroll-design.md  2026-03-04-tui-log-scroll.md  2026-03-04-tui-progress-bar-design.md  2026-03-04-tui-progress-bar.md  2026-03-04-tui-ux-refactor-design.md
docs/superpowers/plans/: 2026-06-30-aurora-claude-plugin.md  2026-06-30-aurora-headless-mode.md  2026-07-02-credibility-fixes.md  2026-07-02-per-beam-dir.md  2026-07-02-per-invocation-beam-args.md
docs/superpowers/specs/: 2026-06-24-tui-empty-states-error-visibility-design.md  2026-06-24-tui-log-navigation-design.md  2026-06-24-tui-log-search-design.md  2026-06-24-tui-status-bar-readable-design.md  2026-06-30-aurora-claude-plugin-design.md  2026-06-30-aurora-headless-mode-design.md  2026-07-02-credibility-fixes-design.md  2026-07-02-per-beam-dir-design.md  2026-07-02-per-invocation-beam-args-design.md
plugins/aurora/: README.md
plugins/aurora/.claude-plugin/: plugin.json
plugins/aurora/hooks/: session-context.sh  validate-beamfile.sh
plugins/aurora/skills/using-aurora/references/: beamfile-dsl.md
