[workspace]
resolver = "2"
members = [
    "crates/aurora",
    "crates/aurora-core",
    "crates/aurora-tui",
    "crates/aurora-executor-api",
    "crates/aurora-executor-local",
    "crates/aurora-executor-docker",
]

[workspace.package]
version = "0.5.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
