[package]
name = "aurora-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
pest = "2"
pest_derive = "2"
petgraph = "0.6"
sha2 = "0.10"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
aurora-executor-api = { path = "../aurora-executor-api" }

[dev-dependencies]
tempfile = "3"
aurora-executor-local = { path = "../aurora-executor-local" }
