[package]
name = "aurora-runner-core"
description = "Beamfile parser, DAG engine, scheduler and cache for the Aurora task runner."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "aurora_core"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
pest = "2"
pest_derive = "2"
petgraph = "0.6"
sha2 = "0.10"
glob = "0.3"
aurora-runner-executor-api = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
aurora-runner-executor-local = { workspace = true }
