[package]
name = "aurora-executor-local"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
aurora-executor-api = { path = "../aurora-executor-api" }

[dev-dependencies]
serde_json = { workspace = true }
