[package]
name = "aurora"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aurora"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
aurora-core = { path = "../aurora-core" }
aurora-tui = { path = "../aurora-tui" }
aurora-executor-api = { path = "../aurora-executor-api" }
aurora-executor-local = { path = "../aurora-executor-local" }
aurora-executor-docker = { path = "../aurora-executor-docker" }
extism = "1"
dirs = "5"
async-trait = { workspace = true }
serde_json = { workspace = true }
