[package]
name = "aurora-runner"
description = "A parallel task runner and build tool: Beamfile DSL, DAG scheduling, input-hash caching and a live TUI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "aurora"
path = "src/lib.rs"

[[bin]]
name = "aurora"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
aurora-runner-core = { workspace = true }
aurora-runner-tui = { workspace = true }
aurora-runner-executor-api = { workspace = true }
aurora-runner-executor-local = { workspace = true }
aurora-runner-executor-docker = { workspace = true }
extism = "1"
dirs = "5"
strsim = "0.11"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jiff = "0.1"
notify = "8"
glob = "0.3"
clap_complete = "4.6.7"
clap_mangen = "0.3.0"

[dev-dependencies]
tempfile = "3"
