[package]
name = "aurora-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Beamfile DSL parser for Aurora build system"

[dependencies]
aurora-core = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
