[package]
name = "aurora-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM plugin system for Aurora build system"

[dependencies]
aurora-core = { workspace = true }
wasmtime = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
